# magma

./: .gitmodules  CMakeLists.txt  README.md  compile_shaders.sh  main.cc
demos/: CMakeLists.txt  flock.cc  fluid_sim.cc  triangle.cc
resources/: fish.gltf
shaders/: boids.comp  debug.h.glsl  debugFrag.glsl  debugVert.glsl  fishFrag.glsl  fishVert.glsl  fluid_advect_quantity.glsl  fluid_apply_force.glsl  fluid_boundary.h.glsl  fluid_cube_vert.glsl  fluid_ink_present.glsl  fluid_jacobi_solver.glsl  fluid_project_divergence.glsl  fluid_project_gradient_subtract.glsl  fluid_vorticity_curl.glsl  fluid_vorticity_force.glsl  quaternion.h.glsl  skyboxFrag.glsl  skyboxVert.glsl  triangleFrag.glsl  triangleFrag.spv  triangleVert.glsl  triangleVert.spv
source/: CMakeLists.txt  animation.cc  animation.h  camera.cc  camera.h  host_timer.h  input.h  logging.cc  logging.h  logging_misc.h  magma.h  main.cc  maths.h  mesh_loaders.cc  mesh_loaders.h  vk_boilerplate.cc  vk_boilerplate.h  vk_buffer.cc  vk_buffer.h  vk_commands.cc  vk_commands.h  vk_dbg.cc  vk_dbg.h  vk_loader.cc  vk_loader.h  vk_pipeline.cc  vk_pipeline.h  vk_resource.cc  vk_resource.h  vk_shader.cc  vk_shader.h  vk_swapchain.cc  vk_swapchain.h  vk_types.h
source/platform/: input_desktop.cc  platform.h  window_desktop.cc
